# libcrystal

./: CMakeLists.txt  LICENSE  README.md  compile.sh
include/: crystal.h.in
include/crystal/: base58.h  bitset.h  builtins.h  crypto.h  crystal_config.h  getopt.h  gettimeofday.h  ids_heap.h  ifaddrs.h  linkedhashtable.h  linkedlist.h  posix_helper.h  rc_mem.h  socket.h  spopen.h  strptime.h  time_util.h  timerheap.h  vlog.h
src/: CMakeLists.txt  base58.c  base58.h  bitset.c  bitset.h  crypto.c  crypto.h  crystal_config.h  ids_heap.c  ids_heap.h  linkedhashtable.c  linkedhashtable.h  linkedlist.c  linkedlist.h  rc_mem.c  rc_mem.h  socket.c  socket.h  spopen.c  spopen.h  time_util.c  time_util.h  timerheap.c  timerheap.h  vlog.c  vlog.h
src/BR/: BRBase58.c  BRCrypto.c
src/android/: ifaddrs.c  ifaddrs.h
src/windows/: builtins.h  getopt.h  getopt_long.c  gettimeofday.c  gettimeofday.h  posix_helper.h  strptime.c
tests/: CMakeLists.txt  base58_test.c  bitset_test.c  suites.h  tests.c
